k8s_manifests/nginx-ingress-canary.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: normal-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx 
spec:
  rules:
    - host: facets.app
      http:
        paths:
          - path: '/'
            pathType: ImplementationSpecific
            backend:
              service: 
                name: blue-app
                port:
                  number: 8080

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: canary-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "25" 
spec:
  rules:
    - host: facets.app
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service: 
                name: green-app   
                port: 
                  number: 8080
